# hydt-kiro

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.kiro/specs/welcome-greeter/: design.md  requirements.md  tasks.md
src/: __init__.py  app.py  blessing_generator.py  config.py  face_database.py  face_detection.py  face_feature_extractor.py  greeter_service.py  logger.py  video_capture.py  video_renderer.py
tests/: conftest.py  test_blessing_generator.py  test_blessing_generator_properties.py  test_error_handling.py  test_face_database.py  test_face_database_properties.py  test_face_detection.py  test_face_detection_properties.py  test_face_feature_extractor.py  test_face_feature_extractor_properties.py  test_fastapi.py  test_fastapi_endpoints.py  test_greeter_service.py  test_greeter_service_properties.py  test_setup.py  test_video_capture.py  test_video_renderer.py  test_video_renderer_properties.py
